Informações do Microsoft Access

--- a/SGBD/access.html
+++ b/SGBD/access.html
@@ -15,6 +15,9 @@
     <main>
         <section>
             <nav>
+                <div id="img1">
+                    <img id="microsoft" src="imagens/Microsoft-Access.png" alt="Microsoft Access">
+                </div>
                 <div>
                     <p>
                         Basicamente, o Microsoft Access é um sistema de gerenciamento
@@ -42,16 +45,33 @@
                     tempo de uso.
                     </p>
                 </div>
+                 <!-- historico(breve historia da sgbd em questao -->
+                <div>
+                    <p>
+                        aaa
+                    </p>
+                </div>
+                 <!-- plataforma(sistemas operacionais suportados)) -->
+                 <div>
+                     <p>
+                         sss
+                     </p>
+                 </div>
+                    <!-- interface do usuario e prints de tela -->
+                 <div>
+                    <img src="imagens/printAccess.png" alt="Print da tela do Microsoft Access">
+                    <img src="imagens/printAccess1.png" alt="Print da tela do Microsoft Access">
+                 </div>
+                    <!-- curiosidades -->
+                    <div>
+                        <p>
+                            ass
+                        </p>
+                    </div>
             </nav>
         </section>
     </main>
     
-   
-
-   <!-- valor da licença -->
-   <!-- historico(breve hiatoria da sgbd em questao -->
-   <!-- plataforma(sistemas operacionais suportados)) -->
-   <!-- interface so usuario e prints de tela -->
    <!-- curiosidades -->
 
 </body>
