--- a/paginaSGBD.html
+++ b/paginaSGBD.html
@@ -42,7 +42,7 @@
                 <div class="divlinha1">
                     <div class="espaco">
                         <h2>
-                            <a href="SGBD/oracle.html class="linha">
+                            <a href="SGBD/oracle.html" class="linha">
                                 Oracle
                             </a>
                         </h2>
