--- a/SGBD/access.html
+++ b/SGBD/access.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="access.css">
-    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Microsoft_Office_Access_%282018-present%29.svg/64px-Microsoft_Office_Access_%282018-present%29.svg.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/ACCESS/microsoft-access.svg" type="image/x-icon">
     <title>Access</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <section>
             <nav>
                 <div id="img1">
-                    <img id="microsoft" src="imagens/Microsoft-Access.png" alt="Microsoft Access">
+                    <img id="microsoft" src="imagens/ACCESS/Microsoft-Access.jpg" alt="Microsoft Access">
                 </div>
                 <div>
                     <p>
@@ -59,8 +59,7 @@
                  </div>
                     <!-- interface do usuario e prints de tela -->
                  <div>
-                    <img src="imagens/printAccess.png" alt="Print da tela do Microsoft Access">
-                    <img src="imagens/printAccess1.png" alt="Print da tela do Microsoft Access">
+                    <img src="imagens/ACCESS/print.png" alt="Print da tela do Microsoft Access">
                  </div>
                     <!-- curiosidades -->
                     <div>
