Seção Microsoft Access finalizada

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
    <!-- O que: -->
    <!-- Fabricante -->
    <!-- Versoes mais atuais -->
-   <!-- tipo de licença (gratuita, paga ou cod aberto) -->
-   <!-- valor da licença -->
-   <!-- historico(breve hiatoria da sgbd em questao -->
-   <!-- plataforma(sistemas operacionais suportados)) -->
-   <!-- interface so usuario e prints de tela -->
+   <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+   <!-- Valor da licença -->
+   <!-- Histórico (breve hiatoria da sgbd em questao -->
+   <!-- Plataforma (sistemas operacionais suportados) -->
+   <!-- Interface ao usuario e prints de tela -->
    <!-- curiosidades -->
     <script src="main.js"></script>
 </body>
