--- a/SGBD/access.html
+++ b/SGBD/access.html
@@ -15,59 +15,88 @@
     <main>
         <section>
             <nav>
+                <div id="divtitle">
+                    <h1 id="title">
+                        Microsoft Access
+                    </h1>
+                </div>
                 <div id="img1">
-                    <img id="microsoft" src="imagens/ACCESS/Microsoft-Access.jpg" alt="Microsoft Access">
+                    <img id="microsoft" src="imagens/ACCESS/Microsoft-Access.jpg" title="Microsoft Access">
                 </div>
-                <div>
-                    <p>
-                        Basicamente, o Microsoft Access é um sistema de gerenciamento
-                        de banco de dados da Microsoft.
-                    </p>
+                <br><br>
+                <div id="titletabela">
+                    <h3>
+                        Tópicos sobre a SGBD
+                    </h3>
                 </div>
-                <!-- Fabricante -->
-                <div>
-                    <p>
-                        Seu desenvolvedor foi a própria Microsoft, tendo como versão
-                        mais atual: <ul>
-                            <!-- Versoes mais atuais -->
-                            <li>
-                                2019 (16.0) / (24 de setembro de 2018)
-                            </li>
-                        </ul>
-                    </p>
-                </div>
-                   <!-- tipo de licença (gratuita, paga ou cod aberto) -->
-                <div>
-                    <p>
-                        Sua licença para utilização é chamada de '<em>Shareware</em>', 
-                    ou seja, por princípio é disponibilizada gratuitamente, podendo 
-                    custear algumas funcionalidades ou até mesmo depois de determinado
-                    tempo de uso.
-                    </p>
-                </div>
-                 <!-- historico(breve historia da sgbd em questao -->
-                <div>
-                    <p>
-                        aaa
-                    </p>
-                </div>
-                 <!-- plataforma(sistemas operacionais suportados)) -->
-                 <div>
-                     <p>
-                         sss
-                     </p>
-                 </div>
-                    <!-- interface do usuario e prints de tela -->
-                 <div>
-                    <img src="imagens/ACCESS/print.png" alt="Print da tela do Microsoft Access">
-                 </div>
-                    <!-- curiosidades -->
-                    <div>
-                        <p>
-                            ass
-                        </p>
-                    </div>
+                <br><br>
+                <div id="tabela">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Tópicos</th>
+                                <th>Microsoft Access</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <!-- Fabricante -->
+                                <td><strong>Fabricante</strong></td>
+                                <td>Seu desenvolvedor é a própria Microsoft</td>
+                            </tr>
+                            <tr>
+                                <!-- Versões mais atuais -->
+                                <td><strong>Versão mais atual</strong></td>
+                                <td>2019 (16.0) / (24 de setembro de 2018)</td>
+                            </tr>
+                            <tr>
+                                <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                <td><strong>Tipo de licença</strong></td>
+                                <td>Sua licença é chamada de '<em>Shareware</em>', 
+                                    ou seja, por princípio é disponibilizada gratuitamente, podendo 
+                                    custear algumas funcionalidades ou até mesmo depois de determinado
+                                    tempo de uso.</td>
+                            </tr>
+                            <tr>
+                                <!-- Histórico (breve hiatoria da sgbd em questao -->
+                                <td><strong>Histórico</strong></td>
+                                <td>Em 1992 a Microsoft lançou seu 
+                                    primeiro Sistema de Gerenciamento de Banco de Dados, 
+                                    chamado Microsoft Access (MS Access).<br/>
+                                    Ao ser lançado por um preço bastante atrativo (U$99) o MS 
+                                    Access 1.0 para Windows foi logo tomando conta do mercado.
+                                    <br/>
+                                    Ao passar dos anos, também foram lançadas outras versões,
+                                    como: <ul>
+                                        <li>1993 - MS Access 1.1</li>
+                                        <li>1995 - MS Access 7.0</li>
+                                        <li>1997 - MS Access 8.0</li>
+                                        <li>1999 - MS Access 9.0</li>
+                                        <li>2003 - MS Access 11</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- Plataforma (sistemas operacionais suportados) -->
+                                <td><strong>Plataforma</strong></td>
+                                <td>Microsoft Windows</td>
+                            </tr>
+                        </tbody>
+                    </table>
             </nav>
+        </section>
+        <section>
+            <br><br><br>
+            <div id="img1">
+                <div>
+                    <h3 id="print">
+                        Print da tela do usuário
+                    </h3>
+                    <figure>
+                        <img src="imagens/ACCESS/print.png" id="img2" title="Print tela do usuário">
+                    </figure>
+                </div>
+            </div>
         </section>
     </main>
     
