Tutorial no final da página

--- a/SGBD/access.html
+++ b/SGBD/access.html
@@ -81,6 +81,12 @@
                                 <td><strong>Plataforma</strong></td>
                                 <td>Microsoft Windows</td>
                             </tr>
+                            <tr>
+                                <td><strong>Curiosidade</strong></td>
+                                <td>Programadores iniciantes e usuários determinados podem usá-lo
+                                    para construir aplicações simples, sem a necessidade
+                                    de utilizar ferramentas desconhecidas.</td>
+                            </tr>
                         </tbody>
                     </table>
             </nav>
@@ -92,13 +98,27 @@
                     <h3 id="print">
                         Print da tela do usuário
                     </h3>
+                    <br><br>
                     <figure>
                         <img src="imagens/ACCESS/print.png" id="img2" title="Print tela do usuário">
                     </figure>
+                    <br><br><br><br>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div id="divfooter">
+            <h3>
+                Clique nessa seta para voltar à pagina anterior com todos os SGBD's:
+            </h3>
+        </div>
+        <br><br>
+        <div id="divfooter2">
+            <img src="imagens/ACCESS/tutorial.png" alt="Voltar">
+        </div>
+        <br><br>
+    </footer>
     
    <!-- curiosidades -->
 
