Seção Oracle finalizada

--- a/SGBD/oracle.html
+++ b/SGBD/oracle.html
@@ -5,9 +5,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="oracle.css">
+    <link rel="shortcut icon" href="imagens/ORACLE/database.svg" type="image/x-icon">
     <title>Oracle</title>
 </head>
 <body>
+    <body>
+        <main>
+            <section>
+                <nav>
+                    <div id="divtitle">
+                        <h1 id="title">
+                            Oracle
+                        </h1>
+                    </div>
+                    <div id="img1">
+                        <img id="microsoft" src="imagens/ORACLE/Oracle-Database.jpg" title="Microsoft Access">
+                    </div>
+                    <div id="titletabela">
+                        <h3>
+                            Tópicos sobre a SGBD
+                        </h3>
+                    </div>
+                    <br><br>
+                    <div id="tabela">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Tópicos</th>
+                                    <th>Microsoft Access</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <!-- Fabricante -->
+                                    <td><strong>Fabricante</strong></td>
+                                    <td>Seu desenvolvedor é a Oracle Corporation.</td>
+                                </tr>
+                                <tr>
+                                    <!-- Versões mais atuais -->
+                                    <td><strong>Versões mais atuais</strong></td>
+                                    <td> <ul>
+                                        <li>Express Edition (XE);</li>
+                                        <li>Standard Edition (SE);</li>
+                                        <li>Standard Edition One (SEO).</li>
+                                    </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                    <td><strong>Tipo de licença</strong></td>
+                                    <td>Sua licença é chamada de '<em>Software propeietário</em>', 
+                                        que é um software que é licenciado com
+                                        direitos exclusivos para o produtor.</td>
+                                </tr>
+                                <tr>
+                                    <!-- Histórico (breve hiatoria da sgbd em questao -->
+                                    <td><strong>Histórico</strong></td>
+                                    <td>Oracle surgiu por volta dos anos 1970, quando Larry Ellison
+                                        visualizou uma oportunidade inédita para o protótipo de
+                                        banco de dados relacional.<br/>
+                                        Ellison, juntamente a Bob Miner e Ed Oates, percbeu o tremendo
+                                         potencial de negócios no modelo de banco de dados relacional desse 
+                                         protótipo, tornando assim a maior empresa de software empresarial do mundo.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <!-- Plataforma (sistemas operacionais suportados) -->
+                                    <td><strong>Plataforma</strong></td>
+                                    <td>Windows e Linux</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Curiosidade</strong></td>
+                                    <td>
+                                        Algumas das linguagens que podemos usar em Oracle são:
+                                        <ul>
+                                            <li>Assembly;</li>
+                                            <li>C;</li>
+                                            <li>C++;</li>
+                                            <li>Java.</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                </nav>
+            </section>
+            <section>
+                <br><br><br>
+                <div id="img1">
+                    <div>
+                        <h3 id="print">
+                            Print da tela do usuário
+                        </h3>
+                        <br><br>
+                        <figure>
+                            <img src="imagens/ORACLE/print1.jpg" id="img2" title="Print tela do usuário">
+                        </figure>
+                        <br><br><br><br>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div id="divfooter">
+                <h3>
+                    Clique nessa seta para voltar à pagina anterior com todos os SGBD's:
+                </h3>
+            </div>
+            <br><br>
+            <div id="divfooter2">
+                <img src="imagens/ORACLE/tutorial0.jpg" alt="Voltar">
+            </div>
+            <br><br>
+        </footer>
+        
+       <!-- curiosidades -->
     
+    </body>
+    </html>
 </body>
 </html>
