Início seção MariaDb

--- a/SGBD/mariaDB.html
+++ b/SGBD/mariaDB.html
@@ -5,9 +5,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mariaDB.css">
+    <link rel="shortcut icon" href="imagens/MARIADB/icone.png" type="image/x-icon">
     <title>MariaDB</title>
 </head>
 <body>
+    <main>
+        <section>
+            <nav>
+                <div id="divtitle">
+                    <h1 id="title">
+                        MariaDB
+                    </h1>
+                </div>
+                <div id="img1">
+                    <img id="mariaDb" src="imagens/MARIADB/mariadb.jpg" title="MariaDB">
+                </div>
+                <br><br>
+                <div id="titletabela">
+                    <h3>
+                        Tópicos sobre a SGBD
+                    </h3>
+                </div>
+                <br><br>
+                <div id="tabela">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Tópicos</th>
+                                <th>Microsoft Access</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <!-- Fabricante -->
+                                <td><strong>Fabricante</strong></td>
+                                <td>Seu desenvolvedor é a própria Microsoft</td>
+                            </tr>
+                            <tr>
+                                <!-- Versões mais atuais -->
+                                <td><strong>Versão mais atual</strong></td>
+                                <td>2019 (16.0) / (24 de setembro de 2018)</td>
+                            </tr>
+                            <tr>
+                                <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
+                                <td><strong>Tipo de licença</strong></td>
+                                <td>Sua licença é chamada de '<em>Shareware</em>', 
+                                    ou seja, por princípio é disponibilizada gratuitamente, podendo 
+                                    custear algumas funcionalidades ou até mesmo depois de determinado
+                                    tempo de uso.</td>
+                            </tr>
+                            <tr>
+                                <!-- Histórico (breve hiatoria da sgbd em questao -->
+                                <td><strong>Histórico</strong></td>
+                                <td>Em 1992 a Microsoft lançou seu 
+                                    primeiro Sistema de Gerenciamento de Banco de Dados, 
+                                    chamado Microsoft Access (MS Access).<br/>
+                                    Ao ser lançado por um preço bastante atrativo (U$99) o MS 
+                                    Access 1.0 para Windows foi logo tomando conta do mercado.
+                                    <br/>
+                                    Ao passar dos anos, também foram lançadas outras versões,
+                                    como: <ul>
+                                        <li>1993 - MS Access 1.1</li>
+                                        <li>1995 - MS Access 7.0</li>
+                                        <li>1997 - MS Access 8.0</li>
+                                        <li>1999 - MS Access 9.0</li>
+                                        <li>2003 - MS Access 11</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- Plataforma (sistemas operacionais suportados) -->
+                                <td><strong>Plataforma</strong></td>
+                                <td>Microsoft Windows</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Curiosidade</strong></td>
+                                <td>Programadores iniciantes e usuários determinados podem usá-lo
+                                    para construir aplicações simples, sem a necessidade
+                                    de utilizar ferramentas desconhecidas.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </nav>
+        </section>
+        <section>
+            <br><br><br>
+            <div id="img1">
+                <div>
+                    <h3 id="print">
+                        Print da tela do usuário
+                    </h3>
+                    <br><br>
+                    <figure>
+                        <img src="imagens/ACCESS/print.png" id="img2" title="Print tela do usuário">
+                    </figure>
+                    <br><br><br><br>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div id="divfooter">
+            <h3>
+                Clique nessa seta para voltar à pagina anterior com todos os SGBD's:
+            </h3>
+        </div>
+        <br><br>
+        <div id="divfooter2">
+            <img src="imagens/ACCESS/tutorial.png" alt="Voltar">
+        </div>
+        <br><br>
+    </footer>
     
+   <!-- curiosidades -->
+
+</body>
 </body>
 </html>
