--- a/SGBD/oracle.html
+++ b/SGBD/oracle.html
@@ -19,7 +19,7 @@
                         </h1>
                     </div>
                     <div id="img1">
-                        <img id="microsoft" src="imagens/ORACLE/Oracle-Database.jpg" title="Microsoft Access">
+                        <img id="oracle" src="imagens/ORACLE/Oracle-Database.jpg" title="Microsoft Access">
                     </div>
                     <div id="titletabela">
                         <h3>
@@ -75,6 +75,7 @@
                                     <td>Windows e Linux</td>
                                 </tr>
                                 <tr>
+                                    <!-- curiosidades -->
                                     <td><strong>Curiosidade</strong></td>
                                     <td>
                                         Algumas das linguagens que podemos usar em Oracle são:
@@ -117,10 +118,7 @@
                 <img src="imagens/ORACLE/tutorial0.jpg" alt="Voltar">
             </div>
             <br><br>
-        </footer>
-        
-       <!-- curiosidades -->
-    
+        </footer>    
     </body>
     </html>
 </body>
