Seção MariaDB finalizada

--- a/SGBD/mariaDB.html
+++ b/SGBD/mariaDB.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mariaDB.css">
-    <link rel="shortcut icon" href="imagens/MARIADB/icone.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/MARIADB/favicon.png" type="image/x-icon">
     <title>MariaDB</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
                     </h1>
                 </div>
                 <div id="img1">
-                    <img id="mariaDb" src="imagens/MARIADB/mariadb.jpg" title="MariaDB">
+                    <img id="mariaDb" src="imagens/MARIADB/imgprincipal.png" title="MariaDB">
                 </div>
                 <br><br>
                 <div id="titletabela">
@@ -39,50 +39,59 @@
                             <tr>
                                 <!-- Fabricante -->
                                 <td><strong>Fabricante</strong></td>
-                                <td>Seu desenvolvedor é a própria Microsoft</td>
+                                <td>Seus desenvolvedores são: 
+                                    <ul>
+                                        <li>MariaDB Corporation Ab</li>
+                                        <li>MariaDB Foundation</li>
+                                        <li>Michael 'Monty' Widenius</li>
+                                    </ul>
+                                </td>
                             </tr>
                             <tr>
                                 <!-- Versões mais atuais -->
-                                <td><strong>Versão mais atual</strong></td>
-                                <td>2019 (16.0) / (24 de setembro de 2018)</td>
+                                <td><strong>Versões mais atuais</strong></td>
+                                <td><ul>
+                                    <li>10.5 (3 de dezembro de 2019)</li>
+                                    <li>10.4 (9de novembro de 2018)</li>
+                                    <li>10.3 (16 de abril de 2017)</li>
+                                </ul></td>
                             </tr>
                             <tr>
                                 <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
                                 <td><strong>Tipo de licença</strong></td>
-                                <td>Sua licença é chamada de '<em>Shareware</em>', 
-                                    ou seja, por princípio é disponibilizada gratuitamente, podendo 
-                                    custear algumas funcionalidades ou até mesmo depois de determinado
-                                    tempo de uso.</td>
+                                <td>GPLv2 (<a class="linkmdb" href="https://choosealicense.com/licenses/gpl-2.0/" target="_blank">saiba mais</a>) 
+                                    e LGPLv2.1(<a class="linkmdb" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.en.html" target="_blank">
+                                    saiba mais</a>) - Ambas gratuitas.</td>
                             </tr>
                             <tr>
-                                <!-- Histórico (breve hiatoria da sgbd em questao -->
+                                <!-- Histórico (breve historia da sgbd em questao -->
                                 <td><strong>Histórico</strong></td>
-                                <td>Em 1992 a Microsoft lançou seu 
-                                    primeiro Sistema de Gerenciamento de Banco de Dados, 
-                                    chamado Microsoft Access (MS Access).<br/>
-                                    Ao ser lançado por um preço bastante atrativo (U$99) o MS 
-                                    Access 1.0 para Windows foi logo tomando conta do mercado.
-                                    <br/>
-                                    Ao passar dos anos, também foram lançadas outras versões,
-                                    como: <ul>
-                                        <li>1993 - MS Access 1.1</li>
-                                        <li>1995 - MS Access 7.0</li>
-                                        <li>1997 - MS Access 8.0</li>
-                                        <li>1999 - MS Access 9.0</li>
-                                        <li>2003 - MS Access 11</li>
-                                    </ul>
+                                <td>
+                                    MariaDB foi criada em dezembro de 2012, por Michael Widenius e David Axmark e
+                                    Allan Larsson. Esa SGBD tem suporte comercial do banco de dados relacional MySQL 
+                                    e é destinado a permanecer como software livre e de código aberto.<br/>
+                                    Inicialmente, a MariaDB pretendia manter uma altra compatibilidade com o MySQL,
+                                    porém, algumas características as diferenciam bem.<br/>
+                                    O nome "MariaDB" foi escolhido em homenagem a filha de seu principal
+                                    desenvolvedor, Michael Widenius.
                                 </td>
                             </tr>
                             <tr>
                                 <!-- Plataforma (sistemas operacionais suportados) -->
                                 <td><strong>Plataforma</strong></td>
-                                <td>Microsoft Windows</td>
+                                <td>Microsoft Windows, Linux e macOS.</td>
                             </tr>
                             <tr>
                                 <td><strong>Curiosidade</strong></td>
-                                <td>Programadores iniciantes e usuários determinados podem usá-lo
-                                    para construir aplicações simples, sem a necessidade
-                                    de utilizar ferramentas desconhecidas.</td>
+                                <td>
+                                    MariaDb foi escrito nas seguintes Linguagens:
+                                    <ul>
+                                        <li>C;</li>
+                                        <li>C++;</li>
+                                        <li>Perl;</li>
+                                        <li>Bash.</li>
+                                    </ul>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -97,7 +106,7 @@
                     </h3>
                     <br><br>
                     <figure>
-                        <img src="imagens/ACCESS/print.png" id="img2" title="Print tela do usuário">
+                        <img src="imagens/MARIADB/telausuario.jpg" id="img2" title="Print tela do usuário">
                     </figure>
                     <br><br><br><br>
                 </div>
@@ -112,13 +121,10 @@
         </div>
         <br><br>
         <div id="divfooter2">
-            <img src="imagens/ACCESS/tutorial.png" alt="Voltar">
+            <img src="imagens/MARIADB/tutorialmdb.jpg" alt="Voltar">
         </div>
         <br><br>
     </footer>
-    
-   <!-- curiosidades -->
-
 </body>
 </body>
 </html>
