Seção Firebird finalizada

--- a/SGBD/mariaDB.html
+++ b/SGBD/mariaDB.html
@@ -32,7 +32,7 @@
                         <thead>
                             <tr>
                                 <th>Tópicos</th>
-                                <th>Microsoft Access</th>
+                                <th>MariaDB</th>
                             </tr>
                         </thead>
                         <tbody>
