--- a/SGBD/oracle.html
+++ b/SGBD/oracle.html
@@ -32,7 +32,7 @@
                             <thead>
                                 <tr>
                                     <th>Tópicos</th>
-                                    <th>Microsoft Access</th>
+                                    <th>Oracle</th>
                                 </tr>
                             </thead>
                             <tbody>
