Seção SQL Server finalizada

--- a/SGBD/SQLServer.html
+++ b/SGBD/SQLServer.html
@@ -39,35 +39,74 @@
                             <tr>
                                 <!-- Fabricante -->
                                 <td><strong>Fabricante</strong></td>
-                                <td>Seu desenvolvedor é: 
+                                <td>Seus desenvolvedores são: 
+                                    <ul>
+                                        <li>Microsoft;</li>
+                                        <li>Sybase.</li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr>
                                 <!-- Versões mais atuais -->
                                 <td><strong>Versões mais atuais</strong></td>
                                 <td>
+                                    Temos uma vasta lista de opção de versões disponíveis para o SQL Server, 
+                                    entre elas:
+                                    <ul>
+                                        <li>SQL Server 2017 (versão atual);</li>
+                                        <li>SQL Server 2016;</li>
+                                        <li>SQL Server 2014;</li>
+                                    </ul>
+                                    <br/>
+                                    Essa SGBD também possui versões especiais, como:
+                                    <ul>
+                                        <li>Developer;</li>
+                                        <li>Azure;</li>
+                                        <li>Evaluation.</li>
+                                    </ul>
                                 </td>
                             </tr>
                             <tr>
                                 <!-- Tipo de licença (gratuita, paga ou cod aberto) -->
                                 <td><strong>Tipo de licença</strong></td>
-                                <td></td>
+                                <td>O SQL Server é um software proprietário.</td>
+                            </tr>
+                            <tr>
+                                <!-- Valor da licença -->
+                                <td><strong>Valor da licença</strong></td>
+                                <td>
+                                    O valor irá variar conforme a versão desejada, por exemplo:
+                                    <ul>
+                                        <li>A versão 'Developer' é gratuita para download;</li>
+                                        <li>Já a versão 'Enterprise' chega a custar $13,748.</li>
+                                    </ul>
+                                </td>
                             </tr>
                             <tr>
                                 <!-- Histórico (breve historia da sgbd em questao -->
                                 <td><strong>Histórico</strong></td>
                                 <td>
+                                    O SQL Server foi criado em 1988, com a parceria de Microsoft e Sybase.
+                                    Esse SGBD é usado em sites, cadastros, sistemas de lojas, preços, etc.
+                                    <br/>
+                                    Com a sua grande simplicidade na criação de database, o SQL Server 2008 R2 
+                                    impressionou diversas empresas grandes.
                                 </td>
                             </tr>
                             <tr>
                                 <!-- Plataforma (sistemas operacionais suportados) -->
                                 <td><strong>Plataforma</strong></td>
-                                <td></td>
+                                <td><ul>
+                                    <li>Windows;</li>
+                                    <li>Linux.</li>
+                                </ul></td>
                             </tr>
                             <tr>
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
-                                
+                                Podemos endereçar consultas com linguagens de programação, como:
+                                <ul><l>C#;</l>
+                                <l>VB.NET.</l></ul>
                                 </td>
                             </tr>
                         </tbody>
