Iniciando seção MySQL

--- a/SGBD/SQLServer.html
+++ b/SGBD/SQLServer.html
@@ -18,7 +18,7 @@
                     </h1>
                 </div>
                 <div id="img1">
-                    <img id="sqlserver" src="imagens/SQLSERVER/logomarca.png" title="Firebird">
+                    <img id="sqlserver" src="imagens/SQLSERVER/logomarca.png" title="SQL Server">
                 </div>
                 <br><br>
                 <div id="titletabela">
@@ -105,8 +105,8 @@
                                 <td><strong>Curiosidade</strong></td>
                                 <td>
                                 Podemos endereçar consultas com linguagens de programação, como:
-                                <ul><l>C#;</l>
-                                <l>VB.NET.</l></ul>
+                                <ul><li>C#;</li>
+                                <li>VB.NET.</li></ul>
                                 </td>
                             </tr>
                         </tbody>
