--- a/SGBD/mySQL.html
+++ b/SGBD/mySQL.html
@@ -18,7 +18,7 @@
                     </h1>
                 </div>
                 <div id="img1">
-                    <img id="sqlserver" src="imagens/MYSQL/mysqllogo.jpg" title="Firebird">
+                    <img id="mysql" src="imagens/MYSQL/mysqllogo.jpg" title="MySQL">
                 </div>
                 <br><br>
                 <div id="titletabela">
